<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="zw.co.jaynyak_e_solutions.toppaeazy.RegisterActivity"
    android:background="@drawable/toppaeazy_gradient">

    <TextView
        android:text="@string/instructions_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/textView4"
        android:textColor="#fffaf0"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:fontFamily="sans-serif-condensed"/>

    <Button
        android:text="REGISTER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idNumberEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:id="@+id/cornfirmRegistrationButton"
        android:textColor="#fffaf0"
        style="@android:style/Widget.Button"
        android:background="#66cdaa"
        android:fontFamily="sans-serif-condensed"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="12"
        android:layout_marginTop="58dp"
        android:id="@+id/firstNameEditText"
        android:hint="@string/first_name"
        android:background="@android:color/background_light"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="12"
        android:layout_marginTop="38dp"
        android:background="@android:color/background_light"
        android:id="@+id/surnameEditText"
        android:hint="@string/surname"
        android:layout_below="@+id/firstNameEditText"
        android:layout_alignLeft="@+id/firstNameEditText"
        android:layout_alignStart="@+id/firstNameEditText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType=""
        android:ems="12"
        android:layout_marginTop="46dp"
        android:background="@android:color/background_light"
        android:id="@+id/idNumberEditText"
        android:hint="@string/id_no"
        android:layout_below="@+id/surnameEditText"
        android:layout_alignLeft="@+id/surnameEditText"
        android:layout_alignStart="@+id/surnameEditText"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:srcCompat="@drawable/hot_1"
        android:id="@+id/imageView3"
        android:layout_below="@+id/cornfirmRegistrationButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"/>

</RelativeLayout>
